--- a/_publications/2021-BSP.md
+++ b/_publications/2021-BSP.md
@@ -7,7 +7,5 @@ venue: 'Engineering'
 paperurl: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1.full.pdf'
 link: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1'
 github: 'https://github.com/pkudzia/Paper-BodySegmentParameter'
-
-Kudzia P., Jackson E. , Dumas G. Estimating body segment parameters from three- dimensional human body scans (PrePrint: bioRxiv). Submitted 2021
-
+citation: Kudzia P., Jackson E. , Dumas G. Estimating body segment parameters from three- dimensional human body scans (PrePrint: bioRxiv). Submitted 2021
 ---
