--- a/_publications/2017-AJPM.md
+++ b/_publications/2017-AJPM.md
@@ -4,5 +4,7 @@ collection: publications
 permalink: /publication/2017-AJPM
 date: 2017-05-27
 venue: 'Engineering'
-citation: 'Awad L., *Kudzia P.*, Bae J., Long A., Hendron K., Holt K., ODonnell K., Walsh C.,Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot. American Journal of Physical Medicine & Rehabilitation, 96(10), 2017'
+paperurl: '/files/2017-AJPM.pdf'
+link: 'https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7479995/'
+citation: 'Awad L., **Kudzia P.**, Bae J., Long A., Hendron K., Holt K., ODonnell K., Walsh C.,Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot. American Journal of Physical Medicine & Rehabilitation, 96(10), 2017'
 ---
