--- a/_publications/2020-IEEE.md
+++ b/_publications/2020-IEEE.md
@@ -4,5 +4,7 @@ collection: publications
 permalink: /publication/2020-IEE
 date: 2020-04-27
 venue: 'Engineering'
+paperurl: '/files/2020-IEEE.pdf'
+link: 'https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7971412/'
 citation: 'Awad L., Kudzia P., Revi D., Ellis T., Walsh C., Walking faster and farther with a soft robotic exosuit: Implications for post-stroke gait assistance and rehabilitation. IEEE Open Journal of Engineering in Medicine and Biology, 2020'
 ---
