--- a/_publications/2017-STM.md
+++ b/_publications/2017-STM.md
@@ -6,5 +6,5 @@ date: 2017-01-27
 venue: 'Engineering'
 paperurl: '/files/2020-STM.pdf'
 link: 'https://stm.sciencemag.org/content/9/400/eaai9084.short'
-citation: 'Awad L., *Kudzia P.*, Bae J., Long A., Hendron K., Holt K., ODonnell K., Walsh C.,A soft robotic exosuit improves walking after stroke. Science Translational Medicine. 9(400), 2017'
+citation: 'Awad L., <b>Kudzia P.</b>, Bae J., Long A., Hendron K., Holt K., ODonnell K., Walsh C.,A soft robotic exosuit improves walking after stroke. <i>Science Translational Medicine </i>. 9(400), <b>2017</b>'
 ---
