--- a/_publications/2021-BSP.md
+++ b/_publications/2021-BSP.md
@@ -7,5 +7,5 @@ venue: 'Engineering'
 paperurl: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1.full.pdf'
 link: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1'
 github: 'https://github.com/pkudzia/Paper-BodySegmentParameter'
-citation: 'Kudzia P., Jackson E. , Dumas G. Estimating body segment parameters from three-dimensional human body scans (PrePrint: bioRxiv). 2021'
+citation: '<b>Kudzia P.</b>, Jackson E. , Dumas G. Estimating body segment parameters from three-dimensional human body scans (PrePrint: bioRxiv). <i>2021</i>'
 ---
