--- a/_publications/C1.md
+++ b/_publications/C1.md
@@ -1,7 +1,7 @@
 ---
 title: "The interplay between walking speed, economy, and stability after stroke"
 collection: publications
-permalink: /publication/1990-Test
+permalink: /publication/C1
 date: 1990-01-27
 venue: 'Engineering'
 citation: 'Awad L., Knarr B., <b>Kudzia P.</b>, Buchanan T. The interplay between walking speed, economy, and stability after stroke (in review). <b>2021</b>'
