--- a/_publications/P2-2017-STM.md
+++ b/_publications/P2-2017-STM.md
@@ -1,7 +1,7 @@
 ---
 title: "A soft robotic exosuit improves walking after stroke."
 collection: publications
-permalink: /publication/2017-STM
+permalink: /publication/P2-2017-STM
 date: 2017-01-27
 venue: 'Engineering'
 paperurl: '/files/2020-STM.pdf'
