--- a/_publications/P3-2020-IEEE.md
+++ b/_publications/P3-2020-IEEE.md
@@ -1,7 +1,7 @@
 ---
 title: "Walking faster and farther with a soft robotic exosuit: Implications for post-stroke gait assistance and rehabilitation"
 collection: publications
-permalink: /publication/2020-IEE
+permalink: /publication/P3-2020-IEE
 date: 2020-04-27
 venue: 'Engineering'
 paperurl: '/files/2020-IEEE.pdf'
