--- a/_publications/P1-2017-AJPM.md
+++ b/_publications/P1-2017-AJPM.md
@@ -1,7 +1,7 @@
 ---
 title: "Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot"
 collection: publications
-permalink: /publication/2017-AJPM
+permalink: /publication/P1-2017-AJPM
 date: 2017-05-27
 venue: 'Engineering'
 paperurl: '/files/2017-AJPM.pdf'
