--- a/_publications/P4-2021-BSP.md
+++ b/_publications/P4-2021-BSP.md
@@ -1,7 +1,7 @@
 ---
 title: "Estimating body segment parameters from three dimensional human body scans"
 collection: publications
-permalink: /publication/2021-BSP
+permalink: /publication/P4-2021-BSP
 date: 2021-06-27
 venue: 'Engineering'
 paperurl: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1.full.pdf'
