--- a/_publications/Ab-10.md
+++ b/_publications/Ab-10.md
@@ -1,5 +1,5 @@
 ---
-title: " Characterizing the control of leg external control,"
+title: " 10 | Characterizing the control of leg external control,"
 collection: publications
 permalink: /publication/Ab-10
 date: 1970-01-10
