--- a/_publications/Ab-11.md
+++ b/_publications/Ab-11.md
@@ -1,5 +1,5 @@
 ---
-title: " Characterizing the nervous systems control of human leg external forces"
+title: " 11 | Characterizing the nervous systems control of human leg external forces"
 collection: publications
 permalink: /publication/Ab-11
 date: 1970-01-11
