--- a/_publications/Ab-11.md
+++ b/_publications/Ab-11.md
@@ -5,7 +5,7 @@ permalink: /publication/Ab-11
 date: 1970-01-11
 venue: 'Engineering'
 link: 'https://youtu.be/v2-kGeQiJ-o'
-citation: ' <b>Kudzia P.</b>, Robinovitch S.,and Donelan M. SCharacterizing the nervous systems control of human leg external forces. <i> 30th Annual Meeting of the Neural Control of Movement</i>. Virtual Conference A<b>2020</b>'
+citation: ' <b>Kudzia P.</b>, Robinovitch S.,and Donelan M. SCharacterizing the nervous systems control of human leg external forces. <i> 30th Annual Meeting of the Neural Control of Movement</i>. Virtual Conference <b>2020</b>'
 ---
 
 
