--- a/_publications/P1-2017-AJPM.md
+++ b/_publications/P1-2017-AJPM.md
@@ -1,8 +1,8 @@
 ---
-title: "Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot"
+title: "JA 1 | Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot"
 collection: publications
 permalink: /publication/P1-2017-AJPM
-date: 2017-12-01
+date: 2017-01-01
 venue: 'Engineering'
 paperurl: '/files/2017-AJPM.pdf'
 link: 'https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7479995/'
