--- a/_publications/P3-2020-IEEE.md
+++ b/_publications/P3-2020-IEEE.md
@@ -1,8 +1,8 @@
 ---
-title: "Walking faster and farther with a soft robotic exosuit: Implications for post-stroke gait assistance and rehabilitation"
+title: "JA 3 | Walking faster and farther with a soft robotic exosuit: Implications for post-stroke gait assistance and rehabilitation"
 collection: publications
 permalink: /publication/P3-2020-IEE
-date: 2020-12-03
+date: 2020-01-03
 venue: 'Engineering'
 paperurl: '/files/2020-IEEE.pdf'
 link: 'https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7971412/'
