--- a/_publications/P2-2017-STM.md
+++ b/_publications/P2-2017-STM.md
@@ -1,8 +1,8 @@
 ---
-title: "A soft robotic exosuit improves walking after stroke."
+title: "JA 2 | A soft robotic exosuit improves walking after stroke."
 collection: publications
 permalink: /publication/P2-2017-STM
-date: 2017-12-02
+date: 2017-01-02
 venue: 'Engineering'
 paperurl: '/files/2020-STM.pdf'
 link: 'https://stm.sciencemag.org/content/9/400/eaai9084.short'
