--- a/_publications/P6-2021-BSP.md
+++ b/_publications/P6-2021-BSP.md
@@ -1,8 +1,8 @@
 ---
-title: "Estimating body segment parameters from three dimensional human body scans"
+title: "JA 6 | Estimating body segment parameters from three dimensional human body scans"
 collection: publications
 permalink: /publication/P4-2021-BSP
-date: 2021-12-06
+date: 2021-01-06
 venue: 'Engineering'
 paperurl: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1.full.pdf'
 link: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1'
