--- a/_publications/P2-2017-STM.md
+++ b/_publications/P2-2017-STM.md
@@ -1,5 +1,5 @@
 ---
-title: "JA 2 | A soft robotic exosuit improves walking after stroke."
+title: " 2 | A soft robotic exosuit improves walking after stroke."
 collection: publications
 permalink: /publication/P2-2017-STM
 date: 2017-01-02
