--- a/_publications/P3-2020-IEEE.md
+++ b/_publications/P3-2020-IEEE.md
@@ -1,5 +1,5 @@
 ---
-title: "JA 3 | Walking faster and farther with a soft robotic exosuit: Implications for post-stroke gait assistance and rehabilitation"
+title: "3 | Walking faster and farther with a soft robotic exosuit: Implications for post-stroke gait assistance and rehabilitation"
 collection: publications
 permalink: /publication/P3-2020-IEE
 date: 2020-01-03
