--- a/_publications/P1-2017-AJPM.md
+++ b/_publications/P1-2017-AJPM.md
@@ -1,5 +1,5 @@
 ---
-title: "JA 1 | Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot"
+title: "1 | Reducing post stroke gait compensations through targeted assistance of paretic ankle function using a soft wearable robot"
 collection: publications
 permalink: /publication/P1-2017-AJPM
 date: 2017-01-01
