--- a/_publications/Ab-10.md
+++ b/_publications/Ab-10.md
@@ -1,5 +1,5 @@
 ---
-title: " 10 | Characterizing the control of leg external control,"
+title: " 10 | Characterizing the control of leg external control. [Poster](/files/abstracts/2020_IROS_POSTER.png) "
 collection: publications
 permalink: /publication/Ab-10
 date: 1970-01-10
