--- a/_publications/Ab-11.md
+++ b/_publications/Ab-11.md
@@ -1,11 +1,10 @@
 ---
-title: " 11 | Characterizing the nervous systems control of human leg external forces"
+title: " 11 | Characterizing the nervous systems control of human leg external forces. [Poster](/files/abstracts/2021_NCM_POSTER.pdf) [Abstract](/files/abstracts/2021_NCM_ABSTRACT.pdf) [Video](https://youtu.be/v2-kGeQiJ-o)"
 collection: publications
 permalink: /publication/Ab-11
 date: 1970-01-11
 venue: 'Engineering'
-link: 'https://youtu.be/v2-kGeQiJ-o'
-citation: ' <b>Kudzia P.</b>, Robinovitch S.,and Donelan M. SCharacterizing the nervous systems control of human leg external forces. <i> 30th Annual Meeting of the Neural Control of Movement</i>. Virtual Conference <b>2020</b>'
+citation: ' <b>Kudzia P.</b>, Robinovitch S.,and Donelan M. SCharacterizing the nervous systems control of human leg external forces. <i> 30th Annual Meeting of the Neural Control of Movement (NCM)</i>. Virtual Conference <b>2020</b>'
 ---
 
 
