--- a/_publications/Ab-11.md
+++ b/_publications/Ab-11.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/Ab-11
 date: 1970-01-11
 venue: 'Engineering'
-citation: ' <b>Kudzia P.</b>, Robinovitch S.,and Donelan M. SCharacterizing the nervous systems control of human leg external forces. <i> 30th Annual Meeting of the Neural Control of Movement (NCM)</i>. Virtual Conference <b>2020</b>'
+citation: ' <b>Kudzia P.</b>, Robinovitch S.,and Donelan M. Characterizing the nervous systems control of human leg external forces. <i> 30th Annual Meeting of the Neural Control of Movement (NCM)</i>. Virtual Conference <b>2020</b>'
 ---
 
 
