--- a/_publications/P6-2021-BSP.md
+++ b/_publications/P6-2021-BSP.md
@@ -4,8 +4,8 @@ collection: publications
 permalink: /publication/P4-2021-BSP
 date: 2021-01-06
 venue: 'Engineering'
-paperurl: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1.full.pdf'
-link: 'https://www.biorxiv.org/content/10.1101/2021.06.06.445011v1'
+paperurl: '/files/2022-PlosOne.pdf'
+link: 'https://doi.org/10.1371/journal.pone.0262296'
 github: 'https://github.com/pkudzia/Paper-BodySegmentParameter'
-citation: '<b>Kudzia P.</b>, Jackson E. , Dumas G. Estimating body segment parameters from three-dimensional human body scans (PrePrint: bioRxiv | in review ). <b>2022</b>'
+citation: '<b>Kudzia P.</b>, Jackson E. , Dumas G. Estimating body segment parameters from three-dimensional human body scans. PLOS ONE 17(1): e0262296. <b>2022</b>'
 ---
